--- a/main.html
+++ b/main.html
@@ -7,10 +7,39 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <header>
+        <h1>Shaw's News</h1>
+    </header>
 
+    <main>
+        <div class="container">
+            <div class="div-1">
+                <h2>Latest News Articles</h>
+                <ul>
+                    <li>Article 1</li>
+                    <li>Article 2</li>
+                    <li>Article 3</li>
+                </ul>
+            </div>
+
+            <div class="div-2">
+                <h1 align="center">Main Article</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Praesentium molestiae ab quas ipsum iusto!
+                     Deleniti veritatis error nulla iste ratione dignissimos 
+                     iusto! Consectetur at rerum dolorum, dolor ipsum error libero.</p>
+            </div>
+
+            <div class="div-3">
+                <h2>Pictorial News</h2>
+                <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="image_one">
+                <br>
+                <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="image_two">
+                <br>
+                <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="image_three">
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
