--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 
     <main>
         <div class="container">
-            <div class="div-1">
-                <h2>Latest News Articles</h>
+            <div class="latest-news-section">
+                <h3>Latest News Articles</h>
                 <ul>
                     <li>Article 1</li>
                     <li>Article 2</li>
@@ -30,7 +30,7 @@
                      iusto! Consectetur at rerum dolorum, dolor ipsum error libero.</p>
             </div>
 
-            <div class="div-3">
+            <div class="pictorial-news-section">
                 <h2>Pictorial News</h2>
                 <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="image_one">
                 <br>
